# CSCA-5642-deep-learning-final-project

./: .env.example  .gitignore  README.md  app.py  app_device.py  app_logger.py  arg_parser.py  config.py  data_cleansing.py  dl_dataset.py  flicker_dataset.py  main.py  playground.ipynb  pyproject.toml  requirements.txt
config/: __init__.py  arg_parser.py  config.py  logger_config.py
eda/: __init__.py  eda.py  visualizer.py
experiment/: __init__.py  experiment.py
logger/: __init__.py  app_logger.py  wandb_logger.py
